--- a/web/static/styles/main.css
+++ b/web/static/styles/main.css
@@ -26,6 +26,10 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+body, html {
+	height: 100%;
+	width: 100%;
+}
 ol, ul {
 	list-style: none;
 }
@@ -45,33 +49,33 @@ table {
 
 #container {
 	text-align: center;
-	padding: 20px;
-	padding-top: 50px;
-	min-width: 410;
+	height: 100%;
+	width: 100%;
+	min-width: 110px;
 }
 
 #content1 {
-	display: inline-block;
-	vertical-align: top;
+	position: absolute;
+	z-index: 100;
+	right: 10px;
+	top: 10px;
 	height: 400px;
 	width: 30%;
-	margin: 0 1em;
-	min-width: 400px; /*Same as #market canvas*/
+	min-width: 400px;
+	border: solid #DDD 2px;
+	border-radius: 10px;
 	background-color: #EEE;
 }
 
-#content2 {
+#map {
 	display: inline-block;
 	vertical-align: top;
 	border: none;
-	width: 400px;
-	height: 400px;
-	margin: 0 1em;
+	width: 100%;
+	height: 100%;
+	min-width: 100px;
+	min-height: 100px;
 	background-color: #EEE;
-}
-
-#market {
-	vertical-align: top;
 }
 
 #titleBlock {
@@ -115,52 +119,11 @@ table {
 }
 
 
-
-.shout {
-	display: inline-block;
-	position: relative;
-	vertical-align: baseline;
-	width: 95%;
-	margin-top: 6px;
-	border-radius: 5px;
-	padding: 5px;
-	background-color: #DDE;
-	color: #555;
-	font-size: 8pt;
-}
-
-.shout p {
-	text-align: center;
-	margin: 5px;
-	font-size: 12px;
-}
-
-.shout img {
-	height: 32px;
-	width: 32px;
-	margin: 2px;
-	float: left;
-}
-
-.shout-author {
-	display: block;
-	position: absolute;
-	bottom: 8px;
-	left: 44px;
-	float: left;
-}
-
-.shout-time {
-	display: block;
-	position: absolute;
-	bottom: 8px;
-	right: 8px;
-}
-
 footer {
+	display: none;
 	text-align: center;
-	width: 80%;
-	margin: auto;
-	margin-top: 15px;
+	padding: 4px;
+	width: 100%;
+	height: 15px;
 	font-size: 8pt;
 }
