--- a/web/static/styles/main.css
+++ b/web/static/styles/main.css
@@ -174,6 +174,44 @@ bottom: 8px;
 right: 8px;
 }
 
+/********
+Merchant 
+********/
+#merchpage {
+	text-align: left;
+	border: dashed #999 2px;
+}
+
+.merchtitle {
+	font-size: 18pt;
+	font-family: sans-serif;
+	text-decoration: underline;
+	text-align: left;
+	margin-left: 5%;
+	width: 90%;
+	margin-left: 15px;
+}
+
+.merchhandle {
+	font-size: 12pt;
+	color: #444;
+	text-align: left;
+	margin-left: 5%;
+	width: 90%;
+	font-family: "helvetica-lite";
+}
+
+.merchdesc {
+	font-size: 12pt;
+	font-family: "Garamond";
+	color: black;
+	text-align: left;
+	margin-left: 5%;
+	width: 90%;
+	padding-top: 10px;
+
+}
+
 /******
  ADMIN
 *******/
@@ -199,7 +237,7 @@ right: 8px;
 	border: dotted #AAA 2px;
 }
 
-#back {
+a.back {
 	display: none;
 	position: absolute;
 	left: 5px;
